# signalvc

./: .env.example  .gitignore  .prettierrc.cjs  .python-version  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json  vercel.json
api/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/migrations/: env.py
api/migrations/sql/: 0001_vc_table.sql  0003_swipes_table.sql
api/migrations/versions/: aa0e3d63e4e2_swipes_table.py
api/scripts/: entrypoint.sh  generate_startup_investor_data.py  run_local.sh
api/src/api/: conf.py  deps.py  server.py
api/src/api/repositories/: feed.py  startup.py
api/src/api/routes/: feed.py
api/src/api/schemas/: __init__.py  exceptions.py  feed.py  validators.py
api/src/cli/: main.py
apps/api/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/landing-page/: package.json  tailwind.config.ts
apps/landing_alt/: components.json  eslint.config.mjs  package.json
apps/mobile/: App.tsx  app.json  eslint.config.mjs  metro.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/: CUSTOMER_PERSONA.md  LLM_NOTES.md  PROJECT_SUMMARY.md  UI_FRAMEWORK.md  landing_page_ideas.md  s01_product_feature_design.md  s02_prio_list
examples/auth/: AuthProvider.tsx  base.ts  strategy.ts  utils.ts
scripts/: generate_vc_data.py
src/api/: server.py
test-reco-algo/: README.md  app.json  babel.config.js  package-lock.json
test-reco-algo-web/: package-lock.json  package.json
(+164 files in other folders)
